scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-html,
-body {
+html, body {
   max-width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
